--- a/BASIC JS/Exercicio 2/index.html
+++ b/BASIC JS/Exercicio 2/index.html
@@ -7,37 +7,36 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <fieldset>
-            <legend>Entradas</legend>
-            <div class="row">
-                <div>
-                    <label for="numeroA"></label>
-                    <input id="numberA" type="number" name="number" placeholder="Ex: 12.5" />
+        <section>
+            <fieldset>
+                <legend>Entradas</legend>
+                <div class="row">
+                    <div>
+                        <label for="numeroA"></label>
+                        <input id="numberA" type="number" name="number" placeholder="Ex: 12.5" />
+                    </div>
+                    <div>
+                        <label for="numberB"></label>
+                        <input type="number" name="numberB" id="numberB" placeholder="Ex: 3" />
+                    </div>
                 </div>
-                <div>
-                    <label for="numberB"></label>
-                    <input type="number" name="numberB" id="numberB" placeholder="Ex: 3" />
-                </div>
+            </fieldset>
+            <label for="operacao">Operações</label>
+            <select id="operacao">
+                <option value="all">Todas</option>
+                <option value="soma">Soma</option>
+                <option value="sub">Subtração</option>
+                <option value="mul">Multiplicação</option>
+                <option value="div">Divisão</option>
+                <option value="resto">Resto (%)</option>
+            </select>
+            <div class="actions">
+                <button id="limpar">Limpar</button>
+                <button id="calcular">Calcular</button>
             </div>
-        </fieldset>
-
-        <label for="operacao">Operações</label>
-        <select id="operacao">
-            <option value="todas">Todas</option>
-            <option value="soma">Soma</option>
-            <option value="sub">Subtração</option>
-            <option value="mul">Multiplicação</option>
-            <option value="div">Divisão</option>
-            <option value="resto">Resto (%)</option>
-        </select>
-
-        <div class="actions">
-            <button id="calcular">Calcular</button>
-            <button id="limpar">Limpar</button>
-        </div>
-
-        <h3>Resultado</h3>
-        <div id="resultado">Preencha os numeros e selecione a operação.</div>
+            <h3>Resultado</h3>
+            <div id="resultado">Preencha os numeros e selecione a operação.</div>
+        </section>
         <script src="script.js"></script>
     </body>
 </html>
